--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/jsebascalle/CursoJavascriptPro#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.3.3",
     "express": "^4.17.0",
     "pug": "^2.0.3",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "sequelize": "^5.8.6",
+    "sqlite3": "^4.0.8"
   }
 }
