--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
     "express": "^4.17.0",
+    "express-paginate": "^1.0.0",
+    "method-override": "^3.0.0",
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
