--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-session": "^1.3.3",
     "express": "^4.17.0",
     "express-paginate": "^1.0.0",
+    "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "pug": "^2.0.3",
     "request": "^2.88.0",
