--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-session": "^1.3.3",
     "express": "^4.17.0",
     "express-paginate": "^1.0.0",
+    "express-session": "^1.16.1",
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "pug": "^2.0.3",
