--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "sequelize": "^5.8.6",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "sqlite3": "^4.0.8"
   }
 }
