--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines":{
+    "node" : "11.14.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jsebascalle/CursoJavascriptPro.git"
@@ -19,18 +22,21 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
-    "cookie-session": "^1.3.3",
     "express": "^4.17.0",
     "express-paginate": "^1.0.0",
     "express-session": "^1.16.1",
-    "faker": "^4.1.0",
     "method-override": "^3.0.0",
+    "pg": "^7.11.0",
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "sequelize": "^5.8.6",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "sqlite3": "^4.0.8"
+  },
+  "devDependencies" : {
+    "sqlite3": "^4.0.8",
+    "faker": "^4.1.0",
+    "cookie-session": "^1.3.3",
   }
 }
