--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines":{
-    "node" : "11.14.0"
+  "engines": {
+    "node": "11.14.0"
   },
   "repository": {
     "type": "git",
@@ -31,12 +31,13 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "sequelize": "^5.8.6",
+    "sequelize-cli": "^5.4.0",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
-  "devDependencies" : {
+  "devDependencies": {
     "sqlite3": "^4.0.8",
     "faker": "^4.1.0",
-    "cookie-session": "^1.3.3",
+    "cookie-session": "^1.3.3"
   }
 }
