--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "connect-pg-simple": "^5.0.0",
     "express": "^4.17.0",
     "express-paginate": "^1.0.0",
     "express-session": "^1.16.1",
